RESOLVED FIXED58176
REGRESSION(r81992): Two select boxes mistakenly sit on top of each other in strict mode.
https://bugs.webkit.org/show_bug.cgi?id=58176
Summary REGRESSION(r81992): Two select boxes mistakenly sit on top of each other in s...
Dimitri Glazkov (Google)
Reported 2011-04-08 16:46:41 PDT
I bisected the problem to this range: http://trac.webkit.org/log/trunk/?rev=82003&stop_rev=81947, and it looks like 81992 is the most likely culprit, so I am calling it. Reduction attached. Interesting combination: 1) strict mode 2) whitespace before label 3) select elements. First reported in in http://code.google.com/p/chromium/issues/detail?id=78871.
Attachments
Reduction. (310 bytes, text/html)
2011-04-08 16:47 PDT, Dimitri Glazkov (Google)
no flags
Patch (19.90 KB, patch)
2011-04-12 12:34 PDT, Dave Hyatt
mitz: review+
Dimitri Glazkov (Google)
Comment 1 2011-04-08 16:47:00 PDT
Created attachment 88897 [details] Reduction.
Alexey Proskuryakov
Comment 2 2011-04-11 11:24:19 PDT
Per chromium bug report, this affects verizonwireless.com - payment page does not display the credit card expiration year. Please put all relevant information in bugzilla when moving chromium bugs - there is no reason why everyone should click through to other bug tracking systems and hunt it down for themselves.
Alexey Proskuryakov
Comment 3 2011-04-11 11:24:40 PDT
Dave Hyatt
Comment 4 2011-04-12 12:34:17 PDT
WebKit Review Bot
Comment 5 2011-04-12 12:39:30 PDT
Attachment 89245 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 LayoutTests/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 6 2011-04-12 13:31:14 PDT
Fixed in r83629.
Note You need to log in before you can comment on or make changes to this bug.