https://bugs.webkit.org/show_bug.cgi?id=58176

Reviewed by Dan Bernstein.

Inline replaced elements following positioned elements on lines are not rendered. Make sure the
logic for skipping run construction in appendRunsForObject matches the new logic that I added
to findNextLineBreak. If they don't match up, you risk confusing the run construction code and
causing it to not make runs for objects that follow the positioned object on the line.

Source/WebCore:

Added fast/inline/positioned-object-between-replaced-elements.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::appendRunsForObject):

LayoutTests:

* fast/inline/positioned-object-between-replaced-elements.html: Added.
* platform/mac/fast/inline/positioned-object-between-replaced-elements-expected.checksum: Added.
* platform/mac/fast/inline/positioned-object-between-replaced-elements-expected.png: Added.
* platform/mac/fast/inline/positioned-object-between-replaced-elements-expected.txt: Added.



Canonical link: https://commits.webkit.org/73389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83629 268f45cc-cd09-0410-ab3c-d52691b4dbfc